{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 20,
  "lineage": "55d275ad-624e-4987-ecbf-d53c27607d94",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0033e5503e3309210",
            "arn": "arn:aws:ec2:us-east-1:956463122755:elastic-ip/eipalloc-0033e5503e3309210",
            "domain": "vpc",
            "id": "eipalloc-0033e5503e3309210",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-89-203-194.compute-1.amazonaws.com",
            "public_ip": "3.89.203.194",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "resilientcommerce-nat-eip"
            },
            "tags_all": {
              "Name": "resilientcommerce-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:956463122755:internet-gateway/igw-0497ad46a9470f2a4",
            "id": "igw-0497ad46a9470f2a4",
            "owner_id": "956463122755",
            "tags": {
              "Name": "resilientcommerce-igw"
            },
            "tags_all": {
              "Name": "resilientcommerce-igw"
            },
            "vpc_id": "vpc-0b653aa2619c80401"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:956463122755:loadbalancer/app/resilientcommerce-alb/697279c653c0ee08",
            "arn_suffix": "app/resilientcommerce-alb/697279c653c0ee08",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "resilientcommerce-alb-1325346143.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:956463122755:loadbalancer/app/resilientcommerce-alb/697279c653c0ee08",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "resilientcommerce-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08750cd633a544293"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-073575f8e5dd76c45"
              },
              {
                "subnet_id": "subnet-09dd0b45e78568b0e"
              }
            ],
            "subnets": [
              "subnet-073575f8e5dd76c45",
              "subnet-09dd0b45e78568b0e"
            ],
            "tags": {
              "Name": "resilientcommerce-alb"
            },
            "tags_all": {
              "Name": "resilientcommerce-alb"
            },
            "vpc_id": "vpc-0b653aa2619c80401",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0033e5503e3309210",
            "association_id": "eipassoc-07c8de5eb7f9ea1a6",
            "connectivity_type": "public",
            "id": "nat-0ed238f4f58041ff9",
            "network_interface_id": "eni-078a9a7adade28ef7",
            "private_ip": "10.0.0.25",
            "public_ip": "3.89.203.194",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-073575f8e5dd76c45",
            "tags": {
              "Name": "resilientcommerce-nat"
            },
            "tags_all": {
              "Name": "resilientcommerce-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:956463122755:route-table/rtb-067dcb88bb39b8ed8",
            "id": "rtb-067dcb88bb39b8ed8",
            "owner_id": "956463122755",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ed238f4f58041ff9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "resilientcommerce-private-rt"
            },
            "tags_all": {
              "Name": "resilientcommerce-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b653aa2619c80401"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:956463122755:route-table/rtb-0c48710db2915fcc2",
            "id": "rtb-0c48710db2915fcc2",
            "owner_id": "956463122755",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0497ad46a9470f2a4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "resilientcommerce-public-rt"
            },
            "tags_all": {
              "Name": "resilientcommerce-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b653aa2619c80401"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5aca8f2893a8ec0",
            "route_table_id": "rtb-067dcb88bb39b8ed8",
            "subnet_id": "subnet-08ce118772ef79bc7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06840de889c157b95",
            "route_table_id": "rtb-067dcb88bb39b8ed8",
            "subnet_id": "subnet-061afd6fbd63cee86"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0758a5aa6c9d35a9a",
            "route_table_id": "rtb-0c48710db2915fcc2",
            "subnet_id": "subnet-073575f8e5dd76c45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0770aad5f4adc59ec",
            "route_table_id": "rtb-0c48710db2915fcc2",
            "subnet_id": "subnet-09dd0b45e78568b0e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:956463122755:security-group/sg-08750cd633a544293",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08750cd633a544293",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "resilientcommerce-alb-20260712141037244600000002",
            "name_prefix": "resilientcommerce-alb-",
            "owner_id": "956463122755",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "resilientcommerce-alb-sg"
            },
            "tags_all": {
              "Name": "resilientcommerce-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b653aa2619c80401"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:956463122755:subnet/subnet-08ce118772ef79bc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ce118772ef79bc7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "956463122755",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "resilientcommerce-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "resilientcommerce-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b653aa2619c80401"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:956463122755:subnet/subnet-061afd6fbd63cee86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061afd6fbd63cee86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "956463122755",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "resilientcommerce-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "resilientcommerce-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b653aa2619c80401"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:956463122755:subnet/subnet-073575f8e5dd76c45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073575f8e5dd76c45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "956463122755",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "resilientcommerce-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "resilientcommerce-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b653aa2619c80401"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:956463122755:subnet/subnet-09dd0b45e78568b0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09dd0b45e78568b0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "956463122755",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "resilientcommerce-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "resilientcommerce-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b653aa2619c80401"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:956463122755:vpc/vpc-0b653aa2619c80401",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f2fa8fe5a662af66",
            "default_route_table_id": "rtb-0b78aec6f5894146d",
            "default_security_group_id": "sg-0f101c10ce5534dd5",
            "dhcp_options_id": "dopt-0451ed7d7f053f235",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b653aa2619c80401",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b78aec6f5894146d",
            "owner_id": "956463122755",
            "tags": {
              "Name": "resilientcommerce-vpc"
            },
            "tags_all": {
              "Name": "resilientcommerce-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}